@@ -1,5 +1,8 @@
 2011-05-25  Jason Merrill  <jason@redhat.com>
 
+	* g++.dg/cpp0x/auto23.C: New.
+	* g++.dg/cpp0x/auto9.C: Adjust.
+
 	* g++.dg/cpp0x/defaulted29.C: New.
 
 	* g++.dg/cpp0x/initlist51.C: New.
